# Compressor_Native

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CodeWiki.md  FAILED_EXPERIMENTS.md  FORMAT.md  FailedExperiments.md  README.md  SECURITY.md  build.zig  build.zig.zon  entropyIssue.md  ngram.md  streamlz.pc.in
include/: streamlz.h
scripts/: fuzz_decompress.zig
src/: README.md  capi.zig  cli.zig  fuzz_decompress.zig  main.zig  streamlz.zig
src/StreamLZ/: SlzStream.cs  StreamLZ.cs  StreamLZ.csproj
src/StreamLZ.Cli/: ComparisonBenchmark.cs  Program.cs  StreamLZ.Cli.csproj
src/StreamLZ.Tests/: FramedApiTest.cs  FuzzHarnessTests.cs  FuzzRegressionTests.cs  FuzzTests.cs  GoldenTests.cs  ProgressCancellationTests.cs  UnitTests.cs  WishlistApiTests.cs
src/StreamLZ.Wasm/: .gitignore  README.md  build.sh  index.d.ts  package.json  slz-decompress.wasm  slz-decompress.wat  slz-worker.js  slz.mjs  test.mjs
src/StreamLZ_zig/: BENCHMARKS.md  PARITY.md  README.md  STATUS.md  STRUCTURE.md  audit.md  audit2.md  auditBrief.md  build.zig  renameAudit.md
src/compare/: lz4.zig  zstd.zig
src/decode/: cross_chunk_analyzer.zig  decompress_parallel.zig  fixture_tests.zig  streamlz_decoder.zig
src/dict/: dictionary.zig
src/encode/: compress_parallel.zig  cost_coefficients.zig  encode_fixture_tests.zig  fast_framed.zig  forward_lz.zig  high_framed.zig  match_eval.zig  match_hasher.zig  offset_encoder.zig  streamlz_encoder.zig  text_detector.zig
src/format/: block_header.zig  frame_format.zig
src/io/: BitReader.zig  ptr_math.zig
src/platform/: memory_query.zig  mmap.zig
(+145 files in other folders)
